# sanity

./: .gitignore  Cargo.toml  README  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/api/: vga.rs
src/sys/: allocator.rs  executor.rs  gdt.rs  idt.rs  keyboard.rs  mem.rs  mod.rs  pic.rs
